--- a/Facebook_datatestdriven/Facebook_datatestdriven.csproj
+++ b/Facebook_datatestdriven/Facebook_datatestdriven.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="3.12.0" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="ExtentReports" Version="4.1.0" />
+    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
@@ -22,7 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Report\" />
     <Folder Include="Screenshot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Log4Net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
